examples/misc/error/compilation/eval_nd-module.bfr
let _ = M:x

let main = []